tests/reference/asr-func_01-d87aa4a.stderr
semantic error: Function f is already defined
  --> tests/errors/func_01.py:9:1 - 10:16
   |
 9 |    def f(i: i32):
   |    ^^^^^^^^^^^^^^...
...
   |
10 |        print(i + 2)
   | ...^^^^^^^^^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
